--- a/style.css
+++ b/style.css
@@ -1,20 +1,43 @@
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  font-family: 'Roboto', sans-serif;
+  max-width: 1200px;
+}
+
+body {
+  background-image: url('/images/bg_image.jpg');
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: #464646;
+}
+
 .container {
+  max-width: 100%;
   position: absolute;
   left: 50%;
-  top: 50%;
-  min-width: 50%;
-  transform: translate(-50%, -50%);
+  transform: translateX(-50%);
 }
 
 #svg-object {
-  position: absolute;
-  top: 10%;
+  width: 40vh;
+  position: relative;
   left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.form {
-  margin-top: 200px;
+  transform: translateX(-50%);
+  z-index: -1;
 }
 
 .form input[type='submit'] {
@@ -24,14 +47,55 @@
 .form input[name='city'] {
   display: block;
   min-width: 50%;
+  height: 2.5rem;
   margin: 0 auto;
   margin-bottom: 50px;
   text-align: center;
   text-transform: uppercase;
   font-size: 1.2rem;
+  border: none;
+  border-radius: 5px;
 }
 
 .result {
   text-align: center;
-  padding: 20px;
+  padding: 5% 5%;
+  border-radius: 20px;
+  font-size: 1.2rem;
+}
+
+.result .cityName {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+}
+
+.result h3 {
+  margin: 0 0 5px 0;
+}
+
+.result .description p,
+.result .advice p {
+  margin: 0;
+  padding: 3px 0 3px 0;
+}
+
+.result .pm10 p {
+  margin: 0;
+  padding-top: 5%;
+}
+
+.result .pm25 p {
+  margin: 0;
+  margin-top: 2%;
+}
+
+.result .pm25 span:nth-child(2),
+.result .pm10 span:nth-child(2) {
+  padding: 0 5%;
+}
+
+@media (min-device-width : 320px) and (max-device-width : 480px) {
+  .container {
+    width: 90%;
+  }
 }
