--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 body {
-  background-image: url('/images/bg_image.jpg');
+  background-image: url('./images/bg_image.jpg');
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
